View_Attendance_style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

.title{
    max-width: 600px;
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2rem;
    color:  #4070F4;
    margin-top: -5px;
}

body{
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #EFEFEF;
}

header{
  position: fixed;
  top: 0; left: 0; right: 0;
  background: #fffdfd;
  box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
  padding: 0px 7%;
  display: flex;
  align-items: center;
}

header .logo{
  font-weight: bolder;
  font-size: 1rem;
  background: none;
  padding: 0;
  margin: 0;
  display: inline-block;
  max-height: 100%;
  line-height: 1;
}

header .logo img {
  max-height: 75px;
  width: auto;
  height: auto;
}

.navbar{
  margin-right: 950px;
}

header .navbar ul{
  list-style: none;
}

header .navbar ul li{
  position: relative;
  float: left;
  text-decoration: none;
}

header .navbar ul li a{
  font-size: 12px;
  padding: 13px;
  color: #4070F4;
  display: block;
  text-decoration: none;
}

header .navbar ul li a:hover{
  background: rgb(188, 191, 209);
  color: #fff;
}

header .navbar ul li ul{
  position: absolute;
  left: 0;
  width: 250px;
  background: #fff;
  display: none;
}

header .navbar ul li ul li{
  width: 100%;
  border-top: 1px solid #4070F4;
}

header .navbar ul li ul li ul{
  left: 250px;
  top: 0;
}

header .navbar ul li:focus-within > ul,
header .navbar ul li:hover > ul{
  display: initial;
}

.logout-form{
  margin-left: 1100px;
}

.logout-button{
  background-color: #FF4C4C;
  color: white;
  border: none;
  padding: 10px 15px;
  cursor: pointer;
  font-size: 1rem;
  border-radius: 5px;
}

.logout-button:hover{
  background-color: #e30909;
}

main{
    padding: 0px 20px 20px;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

.filter-section {
    margin-bottom: 20px;
    text-align:center;
}

label {
    display: inline-block;
    margin-right: 10px;
    width: 120px;
    font-weight: bold;
}

input{
    padding: 5px;
    font-size: 16px;
    margin: 5px 0;
}

button {
    padding: 8px 10px;
    background-color: #4070F4;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    margin-top: 20px;
}

button:hover {
    background-color: #454ba0;
}

.result-section{
    margin-top: 30px;
    text-align: center;
}

table {
    border-collapse: collapse;
    width: 100%;
    margin: 0 auto;
}

table th, table td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
}

table th {
    background-color: #f4f4f4;
    text-align: left;
}

